css/main.css
body {
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    font-weight: 300;
    color: #888;
    line-height: 30px;
    text-align: center;
}

strong { 
    font-weight: 600; 
}

a, a:hover, a:focus { 
    color: #9b59b6; 
    text-decoration: none; 
    transition: all .3s; 
}

h1, h2 {
	margin-top: 10px;
	font-family: 'Montserrat', sans-serif;
	font-size: 38px;
    font-weight: 300;
    color: #555;
    line-height: 50px;
}

h3 {
	font-family: 'Montserrat', sans-serif;
	font-size: 22px;
    font-weight: 300;
    color: #555;
    line-height: 30px;
}

img { 
    max-width: 100%; 
}

.medium-paragraph {
	font-size: 17px;
	line-height: 32px;
}

.colored-text { 
    color: #9b59b6; 
}

/** Navbar **/
.navbar {
	background: #444;
	-o-transition: all .6s; -moz-transition: all .6s; -webkit-transition: all .6s; -ms-transition: all .6s; transition: all .6s;
	backface-visibility: hidden;
}
.navbar.navbar-no-bg { 
    background: #444; 
    background: rgba(0, 0, 0, 0.4); 
    opacity: 0.9;
}

.navbar-dark .navbar-nav { 
    font-size: 15px; 
    color: #fff;
    font-weight: 600; 
}
.navbar-dark .navbar-nav .nav-link { 
    color: #fff; 
    color: rgba(255, 255, 255, 0.8); 
    border: 0; 
}
.navbar-dark .navbar-nav .nav-link:hover { 
    color: #fff; 
}
.navbar-dark .navbar-nav .nav-link:focus { 
    color: #fff; outline: 0; 
}

.navbar-expand-md .navbar-nav .nav-link { 
    padding-left: 1rem; 
    padding-right: 1rem; 
}

.navbar-brand {
    width: 100px;
    height: 40px;
    margin: 0px;
    padding: 0px;
	background: url(../images/logo3.png) left center no-repeat;
	border: 0;
	text-indent: -99999px;
}

/** Common **/
.wow {
   visibility: hidden;
}

.section-container {
    margin: 0 auto;
    padding-bottom: 80px;
}

.section-container-gray-bg {
	background: #f8f8f8;
}

.section-container-image-bg, 
.section-container-image-bg h2, 
.section-container-image-bg h3 {
	color: #fff;
}

.section-container-image-bg .divider-1 span {
	border-color: #fff;
}

.section-description {
	margin-top: 60px;
    padding-bottom: 10px;
}

.section-description p {
    margin-top: 20px;
	padding: 0 120px;
}
.section-container-image-bg .section-description p {
	opacity: 0.8;
}

.btn-link-1 {
	display: inline-block;
	height: 50px;
	margin: 0 5px;
	padding: 0 28px;
	background: #9b59b6;
	background: rgba(155, 89, 182, 0.7);
	border: 0;
	font-size: 15px;
    font-weight: 600;
    line-height: 48px;
    color: #fff;
    border-radius: 4px;
    transition: all .3s;
}
.btn-link-1:hover, .btn-link-1:focus, .btn-link-1:active, .btn-link-1:active:focus,
.btn-link-1.btn-primary:not(:disabled):not(.disabled):active,
.btn-link-1.btn-primary:not(:disabled):not(.disabled):active:focus {
	background: #9b59b6;
	background: rgba(155, 89, 182, 0.9);
	outline: 0;
	color: #fff;
	box-shadow: none;
}

.btn-link-2 {
	display: inline-block;
	height: 50px;
	margin: 0 5px;
	padding: 0 28px;
	background: none;
	border: 0;
	border-bottom: 2px solid #9b59b6;
	font-size: 15px;
    font-weight: 600;
    line-height: 48px;
    color: #9b59b6;
    border-radius: 0;
    transition: all .3s;
}
.btn-link-2:hover, .btn-link-2:focus, .btn-link-2:active, .btn-link-2:active:focus,
.btn-link-2.btn-primary:not(:disabled):not(.disabled):active,
.btn-link-2.btn-primary:not(:disabled):not(.disabled):active:focus {
	padding: 0 10px;
	background: none;
	border: 0;
	border-bottom: 2px solid #9b59b6;
	outline: 0;
	color: #9b59b6;
	box-shadow: none;
}

.divider-1 span {
	display: inline-block;
	width: 200px;
	border-bottom: 1px dashed #ccc;
}

/** Top **/
.top {
    padding: 210px 0;
}



.top .text h1 {
    margin-top: 25px;
    text-align: right;
    font-family: 'Pacifico', cursive;
    color: #fff;
}

iframe {
    margin-left: auto;
    margin-right: auto;
}

.video p{
    align-content: center;
    padding-left: 10%;
    padding-right: 10%;
}

.top .description {
	margin: 30px 0 10px 0;
}

.top .description p { 
    opacity: 0.9;
    text-align: right;
    font-weight: 400;
    font-size: 16px;
    font-family: 'Kanit', sans-serif;
    color: #fff;
}

.top .top-link {
    margin-top: 45px;
    text-align: right;
}

/** Second **/
.second-box {
	padding-top: 30px;
	text-align: left;
}

.second-box .second-box-icon {
	width: 80px;
	height: 80px;
	margin: 0 auto;
    font-size: 40px;
    color: #fff;
    line-height: 80px;
    text-align: center;
    border-radius: 28px;
    
    background: #9b59b6; /* Old browsers */
	background: -webkit-linear-gradient(top,  #ffb24b 0%,#9b59b6 100%);
}

.second-box h3 {
	margin-top: 0;
	padding: 0 0 10px 0;
}

/** Tech **/

.tech-box {
	margin-top: 30px;
	text-align: left;
}

.tech-box .tech-box-icon {
	width: 60px;
	height: 60px;
	margin: 0 auto;
    font-size: 28px;
    color: #fff;
    line-height: 60px;
    text-align: center;
    border-radius: 22px;
    
    background: #9b59b6; /* Old browsers */
	background: -moz-linear-gradient(top,  #ffb24b 0%, #9b59b6 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffb24b), color-stop(100%,#9b59b6)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #ffb24b 0%,#9b59b6 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #ffb24b 0%,#9b59b6 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #ffb24b 0%,#9b59b6 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #ffb24b 0%,#9b59b6 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb24b', endColorstr='#9b59b6',GradientType=0 ); /* IE6-9 */
}

.tech-box h3 {
	margin-top: 0;
	padding: 0 0 10px 0;
}

/** Facts **/
.facts-container {
	padding-bottom: 70px;
}

.fact-list {
    margin-top: 30px;
    text-align: center;
}

.fact-list .fact-image img {
	max-width: 160px;
	border-radius: 4px;
}

.fact-list .fact-text {
	margin-top: 30px;
    color: #fff;
    font-weight: 400;
    font-size: 18px;
    font-family: 'Kanit', sans-serif;
}

.fact-list .fact-text a {
	color: #fff;
	border-bottom: 1px dashed #fff;
}
.fact-list .fact-text a:hover, 
.fact-list .fact-text a:focus { color: #fff; border: 0; }

.fact-list .nav-tabs {
	margin-top: 45px;
    border: 0;
    justify-content: center;
}

.fact-heading h2 {
    margin-top: 25px;
    text-align: right;
    font-family: 'Merriweather', serif;
    color: #fff;
    text-align: center;
    font-weight: 600;

}

.fact-list .nav-tabs li {
	margin-left: 10px;
    margin-right: 10px;
}

.fact-list .nav-tabs li a {
    width: 16px;
    height: 16px;
    padding: 0;
    background: none;
    border: 5px solid #fff;
    border-color: rgba(255, 255, 255, 0.8);
    -moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%;
}

.fact-list .nav-tabs li a:hover,
.fact-list .nav-tabs li a:focus {
	background: #fff;
	background: rgba(255, 255, 255, 0.8);
    border: 1px solid #fff;
    border-color: rgba(255, 255, 255, 0.8);
}

/** Portfolio **/
.portfolio-box {
	margin-top: 30px;
	text-align: left;
}

.portfolio-box-image {
	margin-top: 8px;
	border-radius: 4px;
}

.portfolio-box-image img {
	-o-transition: all .8s; -moz-transition: all .8s; -webkit-transition: all .8s; -ms-transition: all .8s; transition: all .8s;
}

.portfolio-box-image:hover img {
	-o-transform: scale(1.25); -moz-transform: scale(1.25); -webkit-transform: scale(1.25); -ms-transform: scale(1.25); transform: scale(1.25);
}

.portfolio-box h3 {
	margin-top: 0;
}
.portfolio-box h3 a { color: #555; }
.portfolio-box h3 a:hover, .portfolio-box h3 a:focus { color: #9b59b6; }

.portfolio-box h3 i {
	padding-left: 10px;
	color: #ccc;
	-o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
}
.portfolio-box h3:hover i { padding-left: 15px; }

.portfolio-box-date {
	padding-bottom: 10px;
	font-size: 14px;
	color: #aaa;
	text-transform: uppercase;
}

.portfolio-box-date i {
	padding-right: 5px;
	color: #ddd;
}

.portfolio-container .section-bottom-button {
	padding-top: 40px;
}

/** Media Queries **/

@media (min-width: 992px) and (max-width: 1199px) {

	.second-box .second-box-icon { width: 60px; height: 60px; font-size: 32px; line-height: 60px; border-radius: 22px; }
	
}

@media (min-width: 301 px) and (max-width: 991px) {
	
	.navbar-expand-md .navbar-nav .nav-link { padding-left: 0.6rem; padding-right: 0.6rem; }
	
	.top-content { padding: 180px 0; }

	.section-description p { padding: 0; }
	
	.second-box .second-box-icon { width: 50px; height: 50px; font-size: 26px; line-height: 50px; border-radius: 18px; }
	
	.tech-box .tech-box-icon { width: 50px; height: 50px; font-size: 26px; line-height: 50px; border-radius: 18px; }
	
	.facts-box h3:hover i { padding-left: 10px; }
	
	.portfolio-box h3:hover i { padding-left: 10px; }

}

@media (max-width: 300px) {
	
	.navbar.navbar-no-bg { background: #444; }
	.navbar-dark .navbar-toggler { border-color: #444; }
	.navbar-dark .navbar-toggler:focus { background: #333; outline: 0; }
	.navbar-expand-md .navbar-nav .nav-link { padding-top: 0.3rem; padding-bottom: 0.3rem; }

	.top-content { padding: 140px 0; }
	.top-content .top-big-link { margin-top: 25px; }
	.top-content .top-big-link a.btn { margin-top: 10px; }
	
	.section-description p { padding: 0; }
	
	.second-container { padding-bottom: 60px; }
	.second-box { text-align: center; }
	.second-box h3 { margin-top: 20px; padding-top: 10px; }
	
	.tech-box { text-align: center; }
	.tech-box h3 { margin-top: 20px; padding-top: 10px; }
	
	.facts-box { text-align: center; }
	.facts-box-image { max-width: 540px; margin: 0 auto; }
	
	.portfolio-box { text-align: center; }
	.portfolio-box-image { max-width: 540px; margin: 0 auto; }
	.portfolio-box h3 { margin-top: 30px; }
	
}

@media (max-width: 415px) {
	
	h1, h2 { font-size: 32px; }

}

